contracts/contracts-mf/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contracts-mf-service
  labels:
    app: contracts-mf-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3006
      targetPort: 3006
  selector:
    app: contracts-mf-deployment
